--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
