--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
     "firebase": "^11.10.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
