--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.2.1",
     "firebase": "^11.10.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.553.0",
     "mongoose": "^8.19.2",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
